add autoload support

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,11 @@
             "email": "jim@jtan.com"
         }
     ],
+    "autoload": {
+        "files": [
+            "jimIcon.php",
+            "floIcon.php"
+        ]
+    },
     "require": {}
 }
