--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /COPYING export-ignore
 /.gitattributes export-ignore
+/.gitignore export-ignore
 /Makefile export-ignore
 /README.md export-ignore
 /test.php export-ignore
